--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,3 +1,14 @@
+@keyframes appear {
+  from {
+    opacity: 0;
+    scale: 0.2;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -11,7 +22,6 @@
   min-height: 100%;
   width: 500px;
   z-index: -1;
-  animation: slowMotion 4s infinite;
 }
 
 .main__title {
@@ -25,6 +35,7 @@
   text-align: center;
   display: block;
   margin: 100px 0 50px;
+  animation: 2s appear;
 }
 
 .main__button {
@@ -39,35 +50,11 @@
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
-  margin: 0 auto;
+  margin: 0 auto 135px;
   display: block;
   transition: 0.2s ease-in;
-  cursor: url("../../images/eth-cursor.png"), pointer;
 }
 
 .main__button:hover {
-  background: #3b5676;
-  opacity: 95%;
+  background: rgba(173, 255, 66, 0.8);
 }
-
-.main__picture {
-  background-image: url("../../images/free-icon-linkedin-1051384.png");
-  background: white;
-  border-radius: 20px;
-  width: 100px;
-  height: 100px;
-}
-
-/* @media (min-aspect-ratio: 16/9) {
-  .main__video {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media (min-aspect-ratio: 16/9) {
-  .main__video {
-    width: auto;
-    height: 100%;
-  }
-} */
