--- a/src/components/PreLoader/PreLoader.css
+++ b/src/components/PreLoader/PreLoader.css
@@ -1,24 +1,44 @@
-.circle-preloader {
+/* .circle-preloader {
   display: block;
   width: 50px;
   height: 50px;
   border: 4px solid #444;
   border-bottom-color: #888;
 
-  border-radius: 50%;
 
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
+  border-radius: 50%; 
 
   animation: spin 0.75s infinite linear;
+} */
+
+.circle__preloader {
+  display: block;
+  margin: 200px auto 230px;
+
+  width: 124px;
+  height: 24px;
+  mask: conic-gradient(
+        from 135deg at top,
+        #0000,
+        #000 0.5deg 90deg,
+        #0000 90.5deg
+      )
+      0 0,
+    conic-gradient(
+        from -45deg at bottom,
+        #0000,
+        #000 0.5deg 90deg,
+        #0000 90.5deg
+      )
+      0 100%;
+  mask-size: 25% 50%;
+  mask-repeat: repeat-x;
+  background: linear-gradient(#8acc35 0 0) left/0% 100% no-repeat #ffffff;
+  animation: l13 2s infinite linear;
 }
 
-@keyframes spin {
+@keyframes l13 {
   100% {
-    transform: rotate(360deg);
+    background-size: 100% 100%;
   }
 }
