--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -22,6 +22,7 @@
   border-radius: 2px;
   padding: 0;
   margin: 0;
+  color: #fff;
 }
 
 .pagination__page:hover {
@@ -45,6 +46,7 @@
   cursor: default;
   width: 31px;
   height: 31px;
+  color: #fff;
 }
 
 .page__link {
@@ -66,8 +68,8 @@
   justify-content: center;
   align-items: center;
   transition: 0.2s ease;
-  width: 33px;
-  height: 33px;
+  width: 31px;
+  height: 31px;
   cursor: pointer;
 }
 
