--- a/src/components/CoinPage/CoinPage.css
+++ b/src/components/CoinPage/CoinPage.css
@@ -1,4 +1,11 @@
 .page__container {
   display: flex;
-  margin: 20px 0 50px;
+  margin: 20px;
+}
+
+@media (max-width: 1125px) {
+  .page__container {
+    flex-direction: column;
+    align-items: center;
+  }
 }
