--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,2 +1,26 @@
 @import url(../../vendor/fonts.css);
 @import url(../../vendor/normalize.css);
+@import url(../Main/Main.css);
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 80px;
+  min-height: 97vh;
+}
+
+.content {
+  flex: 1;
+}
+
+@media (max-width: 810px) {
+  .app-container {
+    margin: 20px 40px;
+  }
+}
+
+@media (max-width: 550px) {
+  .app-container {
+    margin: 20px 20px;
+  }
+}
