--- a/src/components/CoinsList/CoinsList.css
+++ b/src/components/CoinsList/CoinsList.css
@@ -1,8 +1,15 @@
+.coin {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
 .coin__input {
-  display: block;
+  display: flex;
   height: 40px;
   width: 100%;
-  margin: 20px auto;
+  margin-bottom: 20px;
   background: transparent;
   box-sizing: border-box;
   outline: none;
@@ -16,12 +23,28 @@
   border-radius: 50px;
 }
 
-.coin__none {
+.th__24h {
+  padding: 5px;
+}
+
+.th__price {
+  padding: 5px;
+}
+
+.th__cap {
+  width: 180px;
+  padding: 5px;
+}
+
+.th__chart {
+  width: 170px;
+}
+
+.props__24h {
   display: none;
 }
 
 .coin__info {
-  text-align: center;
   width: 100%;
   border-collapse: collapse;
 }
@@ -35,17 +58,27 @@
   line-height: 22px;
   height: 50px;
   position: sticky;
-  top: 0px;
   background-color: #8acc35;
   z-index: 1;
 }
 
 .coin__stat {
   background-color: #181818;
-  height: 60px;
   border-bottom: 1px solid #262525;
   transition: 0.15s ease;
   cursor: pointer;
+}
+
+.coin__rank {
+  text-align: center;
+}
+
+.coin__none {
+  display: block;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 25px;
 }
 
 .coin__stat:hover {
@@ -58,12 +91,12 @@
 }
 
 .coin__container {
-  margin: 20px 0 0 30px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
-
   justify-content: flex-start;
-  gap: 20px;
+  gap: 10px;
+  padding: 0;
+  text-align: left;
 }
 
 .coin__name {
@@ -76,6 +109,12 @@
 
 .coin__symbol {
   opacity: 0.6;
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 0;
 }
 
 .coin__props {
@@ -84,9 +123,96 @@
   font-style: normal;
   font-weight: 300;
   line-height: 22px;
-  justify-items: flex-start;
+  padding: 5px;
+  text-align: right;
 }
 
 .coin__spark {
-  width: 50px;
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  max-width: 160px;
+  max-height: 60px;
+}
+
+.coin__chart {
+  padding: 5px;
+}
+
+.coin__cap {
+  display: none;
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 0;
+}
+
+@media (max-width: 960px) {
+  .coin__name {
+    display: none;
+  }
+  .coin__symbol {
+    opacity: 1;
+    text-align: start;
+  }
+  .coin__cap {
+    display: block;
+    opacity: 0.6;
+    font-size: 12px;
+  }
+
+  .coin__props {
+    font-size: 12px;
+  }
+
+  .coin__image {
+    height: 25px;
+    width: 25px;
+  }
+
+  .coin__title {
+    font-size: 12px;
+  }
+
+  .coin__chart {
+    max-width: 94px;
+    max-height: 35px;
+  }
+
+  .th__chart {
+    width: 90px;
+  }
+
+  .th__cap {
+    display: none;
+  }
+
+  .coin__market-cap {
+    display: none;
+  }
+
+  .th__24h {
+    display: none;
+  }
+
+  .coin__24h {
+    display: none;
+  }
+
+  .props__24h {
+    display: block;
+  }
+}
+
+@media (max-width: 505px) {
+  .coin__input {
+    font-size: 15px;
+    height: 30px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+  }
 }
