--- a/src/components/Converter/Converter.css
+++ b/src/components/Converter/Converter.css
@@ -8,10 +8,11 @@
 
 .converter__container {
   display: flex;
-  width: 90%;
+  justify-content: center;
+
+  width: 100%;
   border: 1px solid #8acc35;
   border-radius: 5px;
-  height: 34px;
 }
 
 .converter__coin {
@@ -19,7 +20,8 @@
   justify-content: space-between;
   height: 30px;
   padding: 2px 4px 2px;
-  border-right: 0.5px solid #8acc35;
+  border-right: 1px solid #8acc35;
+  width: 100%;
 }
 
 .converter__span-coin {
@@ -27,29 +29,60 @@
   font-size: 13px;
   font-weight: 700;
   align-content: center;
-  padding-top: 2px;
 }
 
 .converter__span-usd {
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 13px;
   font-weight: 700;
-  padding-top: 2px;
+
   align-content: center;
 }
 
 .converter__usd {
   display: flex;
   justify-content: space-between;
+
   height: 30px;
   padding: 2px 4px 2px;
+  width: 100%;
 }
 
 .converter__input {
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  align-content: center;
   text-align: left;
   background: transparent;
   border: none;
   outline: none;
   width: 100%;
   padding: 0;
+}
+
+@media (max-width: 450px) {
+  .converter__header {
+    font-size: 11px;
+  }
+
+  .converter__input {
+    font-size: 10px;
+  }
+
+  .converter__coin {
+    height: 25px;
+  }
+
+  .converter__usd {
+    height: 25px;
+  }
+
+  .converter__span-usd {
+    font-size: 10px;
+  }
+
+  .converter__span-coin {
+    font-size: 10px;
+  }
 }
