--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 0 10px;
 }
 
 .footer__text {
@@ -35,10 +36,6 @@
   color: #fff;
 }
 
-.footer__link:hover {
-  opacity: 0.6;
-}
-
 .footer__git {
   transition: 0.2s ease-in;
   cursor: pointer;
@@ -51,10 +48,6 @@
   height: 24px;
 }
 
-.footer__git:hover {
-  opacity: 0.6;
-}
-
 .footer__in {
   transition: 0.2s ease-in;
   cursor: pointer;
@@ -62,6 +55,50 @@
   color: #fff;
 }
 
-.footer__in:hover {
-  opacity: 0.6;
+@media (max-width: 810px) {
+  .footer__text {
+    font-size: 12px;
+  }
+  .footer__link {
+    font-size: 12px;
+  }
+  .footer__images {
+    width: 18px;
+    height: 18px;
+  }
+
+  .footer__social {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 550px) {
+  .footer__text {
+    font-size: 10px;
+  }
+  .footer__link {
+    font-size: 10px;
+  }
+  .footer__images {
+    width: 15px;
+    height: 15px;
+  }
+
+  .footer__social {
+    gap: 18px;
+    margin-bottom: 10px;
+  }
+  .footer {
+    flex-direction: column-reverse;
+  }
+  .footer__text {
+    margin: 0;
+  }
+  .footer__link {
+    font-size: 14px;
+  }
+  .footer__images {
+    width: 20px;
+    height: 20px;
+  }
 }
