--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -11,16 +11,20 @@
 
 .main {
   display: flex;
+  gap: 30px;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 300px);
 }
 
 .main__video {
+  object-fit: cover;
   position: absolute;
   right: 0;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  width: 500px;
+  width: 100%;
+  height: 100%;
   z-index: -1;
 }
 
@@ -31,15 +35,13 @@
   font-style: normal;
   font-weight: 500;
   line-height: 90px;
-  margin: 0 auto;
+
   text-align: center;
-  display: block;
-  margin: 100px 0 50px;
   animation: 2s appear;
 }
 
-.main__button {
-  color: #fff;
+.main__link {
+  color: inherit;
   font-size: 24px;
   border: 2px solid;
   padding: 14px 70px;
@@ -48,13 +50,48 @@
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 30px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 24px;
-  margin: 0 auto 135px;
-  display: block;
   transition: 0.2s ease-in;
 }
 
-.main__button:hover {
+.main__link:hover {
   background: rgba(173, 255, 66, 0.8);
+  border: 2px solid rgba(173, 255, 66, 0);
+  opacity: 1;
+}
+
+@media (max-width: 810px) {
+  .main__title {
+    font-size: 50px;
+    line-height: 80px;
+  }
+
+  .main__link {
+    font-size: 22px;
+    line-height: 22px;
+    padding: 10px 45px;
+  }
+
+  .main {
+    gap: 15px;
+  }
+}
+
+@media (max-width: 505px) {
+  .main__title {
+    font-size: 40px;
+    line-height: 70px;
+    margin: 30px;
+  }
+
+  .main__link {
+    font-size: 18px;
+    line-height: 18px;
+    padding: 10px 45px;
+  }
+
+  .main {
+    gap: 0px;
+  }
 }
