--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -4,36 +4,36 @@
   gap: 20px;
 }
 
-.navigation__home {
+.navigation__link {
   color: #fff;
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 25px;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px;
+  line-height: normal;
   transition: 0.15s ease-in;
-  margin: 0 0 5px 0;
 }
 
-.navigation__home:hover {
+.navigation__link:hover {
   color: rgba(173, 255, 66, 0.8);
+  display: inline-block;
+  opacity: 1;
 }
 
-.navigation__market {
-  color: #fff;
-  font-family: "Cabinet Grotesk", sans-serif;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 24px;
-  transition: 0.15s ease-in;
-  margin: 0 0 5px 0;
+@media (max-width: 810px) {
+  .navigation__link {
+    font-size: 18px;
+  }
 }
 
-.navigation__market:hover {
-  color: rgba(173, 255, 66, 0.8);
+@media (max-width: 505px) {
+  .navigation__link {
+    font-size: 14px;
+  }
+  .navigation {
+    gap: 10px;
+  }
 }
 
-.link__style {
-  text-decoration: none;
+@media (min-width: 320px) {
 }
