--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -80,3 +80,28 @@
 .pagination__icon {
   width: 9px;
 }
+
+@media (max-width: 550px) {
+  .pagination {
+    gap: 8px;
+  }
+  .pagination__page {
+    font-size: 15px;
+    width: 25px;
+    height: 25px;
+  }
+
+  .pagination__elipsis {
+    font-size: 15px;
+    width: 25px;
+    height: 25px;
+  }
+  .pagination__icon {
+    width: 6px;
+  }
+
+  .pagination__button {
+    width: 25px;
+    height: 25px;
+  }
+}
