--- a/src/components/SideBar /SideBar.css
+++ b/src/components/SideBar /SideBar.css
@@ -4,6 +4,7 @@
   width: 35%;
   align-items: center;
   border-right: 1px solid #8acc35;
+  padding: 20px;
 }
 
 .side__image {
@@ -68,14 +69,14 @@
 
 .side__range-line {
   margin-top: 25px;
-  width: 90%;
+  width: 100%;
   height: 6px;
   background-image: linear-gradient(to left, #16c784, #ea3943);
   border-radius: 5px;
 }
 .side__range {
   margin: 2px 0 20px;
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   font-family: "Cabinet Grotesk", sans-serif;
@@ -87,7 +88,7 @@
 .side__description {
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 16px;
-  width: 90%;
+  width: 100%;
 }
 
 a {
@@ -103,7 +104,7 @@ a:hover {
 .data__container {
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  width: 100%;
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 13px;
   font-style: normal;
@@ -119,6 +120,47 @@ a:hover {
 .data__title {
   margin-bottom: 0;
 }
+
 .atp {
   font-size: 10px;
+}
+
+@media (max-width: 1125px) {
+  .side__container {
+    border-right: none;
+
+    width: 100%;
+    padding: 0;
+  }
+}
+
+@media (max-width: 450px) {
+  .side__image {
+    height: 120px;
+  }
+  .side__title {
+    font-size: 15px;
+  }
+
+  .side__symbol {
+    font-size: 10px;
+  }
+  .side__price {
+    font-size: 20px;
+  }
+  .side__price24h {
+    font-size: 10px;
+  }
+
+  .side__range {
+    font-size: 10px;
+  }
+
+  .side__description {
+    font-size: 11px;
+  }
+
+  .data__container {
+    font-size: 10px;
+  }
 }
