--- a/src/components/CoinsList/CoinsList.css
+++ b/src/components/CoinsList/CoinsList.css
@@ -1,11 +1,14 @@
-.coin {
+.coins-list {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.coins-list_margin {
   margin-top: 20px;
 }
 
-.coin__input {
+.coins-list__input {
   display: flex;
   height: 40px;
   width: 100%;
@@ -23,33 +26,12 @@
   border-radius: 50px;
 }
 
-.th__24h {
-  padding: 5px;
-}
-
-.th__price {
-  padding: 5px;
-}
-
-.th__cap {
-  width: 180px;
-  padding: 5px;
-}
-
-.th__chart {
-  width: 170px;
-}
-
-.props__24h {
-  display: none;
-}
-
-.coin__info {
+.coins-list__table {
   width: 100%;
   border-collapse: collapse;
 }
 
-.coin__title {
+.coins-list__header {
   color: #000;
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 16px;
@@ -58,39 +40,54 @@
   line-height: 22px;
   height: 50px;
   position: sticky;
+  top: 0;
+  z-index: 10;
   background-color: #8acc35;
-  z-index: 1;
 }
 
-.coin__stat {
+.coins-list__header-name {
+  text-align: left;
+}
+
+.coins-list__header-price {
+  padding: 5px;
+  text-align: right;
+}
+
+.coins-list__header-24h {
+  padding: 5px;
+  text-align: right;
+}
+
+.coins-list__header-cap {
+  padding: 5px;
+  text-align: right;
+}
+
+.coins-list__header-chart {
+  width: 170px;
+}
+
+.coins-list__row {
   background-color: #181818;
   border-bottom: 1px solid #262525;
   transition: 0.15s ease;
   cursor: pointer;
 }
 
-.coin__rank {
+.coins-list__row:hover {
+  background-color: #212121;
+  transform: translate(-6px);
+  -webkit-box-shadow: 5px 5px 8px 0px rgba(138, 204, 53, 1);
+  -moz-box-shadow: 5px 5px 8px 0px rgba(138, 204, 53, 1);
+  box-shadow: 5px 5px 8px 0px rgba(138, 204, 53, 1);
+}
+
+.coins-list__rank {
   text-align: center;
 }
 
-.coin__none {
-  display: block;
-  margin: 0 auto;
-  padding: 20px;
-  font-family: "Cabinet Grotesk", sans-serif;
-  font-size: 25px;
-}
-
-.coin__stat:hover {
-  background-color: #212121;
-}
-
-.coin__image {
-  height: 30px;
-  width: 30px;
-}
-
-.coin__container {
+.coins-list__coin {
   display: inline-flex;
   align-items: center;
   justify-content: flex-start;
@@ -99,7 +96,12 @@
   text-align: left;
 }
 
-.coin__name {
+.coins-list__image {
+  height: 30px;
+  width: 30px;
+}
+
+.coins-list__name {
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -107,7 +109,7 @@
   line-height: 22px;
 }
 
-.coin__symbol {
+.coins-list__symbol {
   opacity: 0.6;
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 16px;
@@ -117,31 +119,7 @@
   padding: 0;
 }
 
-.coin__props {
-  font-family: "Cabinet Grotesk", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 22px;
-  padding: 5px;
-  text-align: right;
-}
-
-.coin__spark {
-  display: inline-flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px;
-  max-width: 160px;
-  max-height: 60px;
-}
-
-.coin__chart {
-  padding: 5px;
-}
-
-.coin__cap {
+.coins-list__market-cap {
   display: none;
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 16px;
@@ -151,65 +129,107 @@
   padding: 0;
 }
 
+.coins-list__coin_props {
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 5px;
+  text-align: right;
+}
+
+.coins-list__spark {
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  max-width: 160px;
+  max-height: 60px;
+}
+
+.coins-list__chart {
+  padding: 5px;
+}
+
+.coins-list__coin_props_7d {
+  display: none;
+}
+
+.coin__none {
+  color: red;
+  background-color: #f8d7da;
+  padding: 10px;
+  margin: 20px 0;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  text-align: center;
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 16px;
+}
+
 @media (max-width: 960px) {
-  .coin__name {
+  .coins-list__header {
+    font-size: 12px;
+  }
+
+  .coins-list__header-24h {
     display: none;
   }
-  .coin__symbol {
+
+  .coins-list__header-cap {
+    display: none;
+  }
+
+  .coins-list__header-chart {
+    width: 90px;
+  }
+
+  .coins-list__rank {
+    font-size: 12px;
+  }
+
+  .coins-list__image {
+    height: 25px;
+    width: 25px;
+  }
+
+  .coins-list__name {
+    display: none;
+  }
+
+  .coins-list__symbol {
     opacity: 1;
     text-align: start;
   }
-  .coin__cap {
+
+  .coins-list__market-cap {
     display: block;
     opacity: 0.6;
     font-size: 12px;
   }
 
-  .coin__props {
+  .coins-list__coin_props {
     font-size: 12px;
   }
 
-  .coin__image {
-    height: 25px;
-    width: 25px;
+  .coins-list__coin_props_hidden {
+    display: none;
   }
 
-  .coin__title {
-    font-size: 12px;
-  }
-
-  .coin__chart {
+  .coins-list__chart {
     max-width: 94px;
     max-height: 35px;
   }
 
-  .th__chart {
-    width: 90px;
-  }
-
-  .th__cap {
-    display: none;
-  }
-
-  .coin__market-cap {
-    display: none;
-  }
-
-  .th__24h {
-    display: none;
-  }
-
-  .coin__24h {
-    display: none;
-  }
-
-  .props__24h {
+  .coins-list__coin_props_7d {
     display: block;
   }
 }
 
 @media (max-width: 505px) {
-  .coin__input {
+  .coins-list__input {
     font-size: 15px;
     height: 30px;
     padding-left: 10px;
