--- a/src/components/Converter/Converter.css
+++ b/src/components/Converter/Converter.css
@@ -1,3 +1,7 @@
+.converter {
+  width: 100%;
+}
+
 .converter__header {
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 16px;
@@ -6,10 +10,10 @@
   margin-bottom: 5px;
 }
 
-.converter__container {
+.converter__body {
   display: flex;
   justify-content: center;
-
+  background-color: #1b1b1b;
   width: 100%;
   border: 1px solid #8acc35;
   border-radius: 5px;
@@ -24,41 +28,52 @@
   width: 100%;
 }
 
-.converter__span-coin {
-  font-family: "Cabinet Grotesk", sans-serif;
-  font-size: 13px;
-  font-weight: 700;
-  align-content: center;
-}
-
-.converter__span-usd {
-  font-family: "Cabinet Grotesk", sans-serif;
-  font-size: 13px;
-  font-weight: 700;
-
-  align-content: center;
-}
-
-.converter__usd {
-  display: flex;
-  justify-content: space-between;
-
-  height: 30px;
-  padding: 2px 4px 2px;
-  width: 100%;
-}
-
 .converter__input {
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 15px;
   font-weight: 500;
   align-content: center;
   text-align: left;
-  background: transparent;
+  background-color: #1b1b1b;
   border: none;
   outline: none;
   width: 100%;
   padding: 0;
+}
+
+.converter__symbol {
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 13px;
+  font-weight: 700;
+  align-content: center;
+}
+
+.converter__usd {
+  display: flex;
+  justify-content: space-between;
+  height: 30px;
+  padding: 2px 4px 2px;
+  width: 100%;
+}
+
+.converter__usd-input {
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  align-content: center;
+  text-align: left;
+  background-color: #1b1b1b;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 0;
+}
+
+.converter__usd-symbol {
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-size: 13px;
+  font-weight: 700;
+  align-content: center;
 }
 
 @media (max-width: 450px) {
@@ -66,23 +81,23 @@
     font-size: 11px;
   }
 
+  .converter__coin {
+    height: 25px;
+  }
+
   .converter__input {
     font-size: 10px;
   }
 
-  .converter__coin {
-    height: 25px;
+  .converter__symbol {
+    font-size: 10px;
   }
 
   .converter__usd {
     height: 25px;
   }
 
-  .converter__span-usd {
-    font-size: 10px;
-  }
-
-  .converter__span-coin {
+  .converter__usd-symbol {
     font-size: 10px;
   }
 }
