--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,14 +10,14 @@
   gap: 20px;
 }
 
-.header__link {
+.header__logo {
   width: 70px;
   height: 70px;
   background-image: url(../../images/Logo-white.svg);
   background-repeat: no-repeat;
 }
 
-.header__link:hover {
+.header__logo:hover {
   background-image: url(../../images/Logo-green.svg);
   opacity: 1;
 }
@@ -32,7 +32,7 @@
 }
 
 @media (max-width: 810px) {
-  .header__link {
+  .header__logo {
     width: 50px;
     height: 50px;
   }
@@ -43,7 +43,7 @@
 }
 
 @media (max-width: 505px) {
-  .header__link {
+  .header__logo {
     width: 40px;
     height: 40px;
   }
@@ -54,5 +54,16 @@
 
   .header__container {
     gap: 10px;
+  }
+}
+
+@media (max-width: 320px) {
+  .header__title {
+    font-size: 12px;
+  }
+
+  .header__logo {
+    width: 30px;
+    height: 30px;
   }
 }
