--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -126,7 +126,7 @@ a:hover {
 }
 
 @media (max-width: 1125px) {
-  .side {
+  .side-bar {
     border-right: none;
     width: 100%;
     padding: 0;
